[workspace]
resolver = "2"
members = ["derive_deserialize", "orca-whirlpool"]
exclude = []

[workspace.dependencies]
substreams = "^0.5.21"
substreams-solana = { version = "0.13.0" }
substreams-entity-change = "1.3.2"
substreams-solana-program-instructions = "0.1"

[build]
target = "wasm32-unknown-unknown"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
