[package]
name = "orca-whirlpool-solana-substreams"
version = "1.0.0"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
sha2 = "0.10.8"
substreams = "^0.5.21"
borsh = { version = "0.10.3" }
substreams-solana = { git = "https://github.com/streamingfast/substreams-solana", branch = "master" }
substreams-solana-program-instructions = "0.1"
substreams-entity-change = "1.3.2"
bytes = "1.1.0"
prost = "0.11"
num-bigint = "0.4"
bs58 = "0.5.0"
chrono = { version = "0.4", features = [ "std" ], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10.2"
hex = "0.4.0"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
