[package]
name = "orca-whirlpool"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Orca Whirlpool Substream - by Messari"

[lib]
crate-type = ["cdylib"]

[dependencies]
sha2 = "0.10.8"
prost = "0.11"
bs58 = "0.5.0"
borsh = { version = "1.5.0", features = ["derive"] }
substreams = { workspace = true }
substreams-solana = { workspace = true, version = "0.13.0" }
substreams-entity-change = { workspace = true }
substreams-solana-program-instructions = { workspace = true }
derive_deserialize = { path = "../derive_deserialize" }
